[gd_scene load_steps=11 format=3 uid="uid://b36pm263dqogc"]

[ext_resource type="Texture2D" uid="uid://bbltt3vtbeo47" path="res://Art/SwordAttack.png" id="1_c3xf1"]
[ext_resource type="Texture2D" uid="uid://dsajmenv8p1jg" path="res://Art/DaggerSlash-Sheet.png" id="2_p7jwu"]
[ext_resource type="Script" path="res://Scenes/Attacks/SmolSlashAttack/SmolSlashAttack.gd" id="3_su4gn"]
[ext_resource type="PackedScene" uid="uid://cwdfuoahfvb6g" path="res://Scenes/Attacks/SmolSlashAttack/SmolSlashAttack2.tscn" id="4_mt4f3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dhbib"]
atlas = ExtResource("1_c3xf1")
region = Rect2(0, 0, 40, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv5x2"]
atlas = ExtResource("1_c3xf1")
region = Rect2(40, 0, 40, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qown1"]
atlas = ExtResource("2_p7jwu")
region = Rect2(0, 0, 20, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_n455u"]
atlas = ExtResource("2_p7jwu")
region = Rect2(20, 0, 20, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_fa8dv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhbib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv5x2")
}],
"loop": false,
"name": &"Slash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qown1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n455u")
}],
"loop": false,
"name": &"Slash2",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v20ub"]
radius = 4.0
height = 18.0

[node name="SmolSlashAttack" type="AnimatedSprite2D"]
z_index = 2
sprite_frames = SubResource("SpriteFrames_fa8dv")
animation = &"Slash2"
autoplay = "Slash2"
script = ExtResource("3_su4gn")
secondSlash = ExtResource("4_mt4f3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 0)
shape = SubResource("CapsuleShape2D_v20ub")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="SecondHitSpawn" type="Marker2D" parent="."]
position = Vector2(9, 0)

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
